2015-11-24 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2015-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Added an icon in 'icons/'.
	* Added desktop entries in 'xdg/'.
2015-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2016-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2018-03-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused card names to be incorrectly
	associated with card indices.
2018-03-20 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 1.0.1.
2018-03-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused launching the application from
	a menu item to fail.
2018-03-20 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 1.0.2.